# mimosa-app

./: .env  .gitignore  Cargo.toml
mimosa-wasm/: Cargo.toml  build.rs
mimosa-wasm/src/: app.rs  errors.rs  lib.rs
mimosa-wasm/src/components/: article_list.rs  article_preview.rs  footer.rs  header.rs  list_pagination.rs  mod.rs
mimosa-wasm/src/models/: article.rs  auth.rs  comment.rs  mod.rs  profile.rs  tag.rs  tags.rs
mimosa-wasm/src/routes/: mod.rs
mimosa-wasm/src/routes/article/: mod.rs
mimosa-wasm/src/routes/home/: mod.rs  root_container.rs
mimosa-wasm/src/services/: article.rs  auth.rs  mod.rs  requests.rs  tags.rs
mimosa-web/: Cargo.toml
