[package]
name = "mimosa-wasm"
version = "0.1.0"
authors = ["walker <warriorsfly@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = { version = "0.4.11", features = ["serde"] }
dotenv_codegen = "0.15.0"
lazy_static = "1.4.0"
log = "0.4.8"
parking_lot = "0.10.2"
pulldown-cmark = "0.7"
serde = "1.0.106"
serde_json = "1.0.51"
thiserror = "1"
web_logger = "0.2.0"
yew = { version="0.14.3", features = ["web_sys"] }
yew-router = { version="0.11.0", features = ["web_sys"] }
wasm-bindgen = "0.2.60"
wee_alloc = "0.4.5"

[dependencies.web-sys]
version = "0.3"
features = [
  "Document",
  "Element",
  "Node",
  "Window",
  "HtmlCollection",
]

[dev-dependencies]
js-sys = "0.3.37"
wasm-bindgen-futures = "0.4.10"
wasm-bindgen-test = "0.3.10"
fn main(){
  println!("Allen feeling");
}